# system-trade-backtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binaryDB  binarydb.cpp  binarydb.h  binarydbwindow.cpp  binarydbwindow.h  binarydbwindow.ui  common.h  fileio.cpp  fileio.h  goldencross.cpp  goldencross.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  struct_util.h
Graduation_Project1/: CMakeLists.txt  binaryDB.cpp  binaryDB.h  binarydbwindow.cpp  binarydbwindow.h  binarydbwindow.ui  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  struct_util.h
